# Cerebro_Viewer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CITATION.cff  Contributors.md  LICENSE  README.md  TO_DO.md  pyproject.toml  tutorial.md
.github/workflows/: release.yml
code/cerebro/: brain_viewer_test.py  cerebro_brain_utils.py  cerebro_brain_viewer.py  cerebro_types.py  cerebro_utils.py  cerebro_window.py  jjtest.py  renderer.py  renderer_test.py
code/data/templates/HCP/dscalars/: S1200.MyelinMap_BC_MSMAll.32k_fs_LR.dscalar.nii  S1200.SmoothedMyelinMap_BC_MSMAll.32k_fs_LR.dscalar.nii  S1200.corrThickness_MSMAll.32k_fs_LR.dscalar.nii  S1200.curvature_MSMAll.32k_fs_LR.dscalar.nii
data/templates/HCP/surfaces/: S1200.L.flat.32k_fs_LR.surf.gii
docs/: conf.py  index.md  requirements.txt
docs/api/: reference.md  utils.md
docs/examples/: README.md  README.rst
docs/examples/simple_surface_rendering/: README.txt  plot_all_surfaces.py  plot_camera.py  plot_cortex_subcortex_surface.py  plot_cortex_surface.py  plot_dscalar.py  plot_subcortex_surface.py  plot_volumetric_expanded.py
docs/examples/volume_surface_rendering/: README.txt  volumetric_mask_to_surface.py
docs/general/: main.md
docs/notebook_examples/: readme.md
docs/notebook_examples/notebook/: example.ipynb
docs/tutorial/: surface.md
