[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Cerebro_Viewer"
version = "0.0.9.4"
authors = [
  { name="Sina Mansour L.", email="sina.mansour.lakouraj@gmail.com" },
]
description = "Cerebro Viewer - A pythonic 3D viewer to visualize and plot brains"
readme = "README.md"
keywords = ["3D", "Brain Viewer"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy>=1.19',
    'matplotlib',
    'scipy',
    'nibabel',
    'trimesh',
    'open3d',
    'Panda3D',
    'scikit-image',
]

[project.urls]
"Homepage" = "https://github.com/sina-mansour/Cerebro_Viewer"
"Bug Tracker" = "https://github.com/sina-mansour/Cerebro_Viewer/issues"

[project.optional-dependencies]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["code"]

[tool.setuptools.package-data]
data = ["**"]
